Agregando elementos en html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Video background</title>
 </head>
 <body>
-
+<header class="header content">
+	<div class="header-video">
+		<video src="Video/video.mp4"></video>
+	</div>
+	<div class="header-ovelay"></div>
+	<div class="header-content">
+		<h1>GatDev</h1>
+		<p>Buen día a todos, video de fondo con Html y CSS3</p>
+		<a class="btn " href="https://github.com/GiovanniGatdev" target="blank">Visita mi Github</a>
+	</div>
+</header>
 </body>
 </html>
