--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<title>Video background</title>
 </head>
 <body>
 <header class="header content">
 	<div class="header-video">
-		<video src="Video/video.mp4"></video>
+		 <video autoplay loop>
+		 	<source src="video/computer.mp4" type="video/mp4">
+		 </video>
 	</div>
-	<div class="header-ovelay"></div>
+	<div class="header-overlay"></div>
 	<div class="header-content">
 		<h1>GatDev</h1>
 		<p>Buen día a todos, video de fondo con Html y CSS3</p>
